# EnergyTrendData-ETL

./: .gitignore  DeltaTable.md  README.md  deploy_daily.py  pyproject.toml  pytest.ini
data/: ET_3.1_JUL_24.xlsx
energytrend_etl/: ingest_data.py  logger_config.py  main.py  preprocess_data.py  save_to_csv.py  validation.py  validation_report.py
output/: ET_3.1_JUL_24.csv
report/: ET_3.1_JUL_24_data_consistency.csv  ET_3.1_JUL_24_data_profiling.csv  ET_3.1_JUL_24_data_profiling.html
tests/integration/: test_integration.py
tests/unit/: test_ingest_data.py  test_preprocess_data.py
